Add AJAX cart items update

--- a/assetsSource/css/layout/Cart/Cart.0000.pcss
+++ b/assetsSource/css/layout/Cart/Cart.0000.pcss
@@ -45,9 +45,17 @@
     width: calc(100% - 100px);
 }
 
+.Cart__ItemTitle--JsEnabled {
+    width: calc(100% - 60px);
+}
+
 .Cart__ItemMeta {
     text-align: right;
     width: 100px;
+}
+
+.Cart__ItemMeta--JsEnabled {
+    width: 60px;
 }
 
 .Cart__ItemMetaPrice {
