--- a/assetsSource/css/layout/Cart/Cart.0550.pcss
+++ b/assetsSource/css/layout/Cart/Cart.0550.pcss
@@ -6,10 +6,18 @@
     width: calc(100% - 240px);
 }
 
+.Cart__ItemTitle--JsEnabled {
+    width: calc(100% - 160px);
+}
+
 .Cart__ItemMeta {
     justify-content: space-between;
     max-height: 42px;
     width: 240px;
+}
+
+.Cart__ItemMeta--JsEnabled {
+    width: 160px;
 }
 
 .Cart__ItemMetaQtyInput {
