Show error messages from AJAX form submission below the pay button

--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -328,6 +328,14 @@
                                         data-value-template="Pay ${total}"
                                     >
                                 </label>
+                                <div class="JSAjaxCartSubmissionNotice" style="display: none;">
+                                    {% embed '_embeds/Note.twig' with {
+                                        isError: true,
+                                    } %}
+                                        {% block noteTitle %}Error{% endblock %}
+                                        {% block noteContent %}{% endblock %}
+                                    {% endembed %}
+                                </div>
                             </section>
                         </form>
                     {% endif %}
