--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -54,16 +54,15 @@
                                 value="/cart/order-success"
                             >
                             <section
-                                class="CheckoutForm__Section CheckoutForm__Section--FirstSection"
+                                class="CheckoutForm__Section CheckoutForm__Section--FirstSection JSCheckoutForm__Section--FirstSection"
                                 data-add-new-card-class="CheckoutForm__Section--FirstSection--HasAddNewCard"
                             >
-                                <h2 class="CheckoutForm__SectionHeader">Payment Method</h2>
                                 <div class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
                                     <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
-                                        Choose existing card or add a new card
+                                        Payment Method
                                         <select
                                             name="paymentMethod"
-                                            class="select{% if checkoutInputErrors['paymentMethod'] is defined %} select--has-error{% endif %} CheckoutForm__Select JSCheckoutForm__Input JSCheckoutForm__Input--UpdateWatch"
+                                            class="select{% if checkoutInputErrors['paymentMethod'] is defined %} select--has-error{% endif %} CheckoutForm__Select JSCheckoutForm__Input JSCheckoutForm__Input--UpdateWatch JSCheckoutForm__PaymentMethod"
                                             required
                                         >
                                             <option value="" disabled selected>Select Payment Method...</option>
@@ -303,12 +302,31 @@
                                     </label>
                                 </div>
                             </section>
-                            <div
-                                class="CheckoutForm__NewCardItems JSCheckoutForm__NewCardItems"
-                                style="display: none;"
-                            >
-                                <section class="CheckoutForm__Section CheckoutForm__Section--SecondSection">
-                                    <h2 class="CheckoutForm__SectionHeader">Payment</h2>
+                            <section class="CheckoutForm__Section CheckoutForm__Section--SecondSection">
+                                <div
+                                    class="CheckoutForm__NewCardItems JSCheckoutForm__NewCardItems"
+                                    style="display: none;"
+                                >
+                                    <h2 class="CheckoutForm__SectionHeader">Card Details</h2>
+                                    <div class="CheckoutForm__LabelGroupWrapper">
+                                        <label class="label CheckoutForm__Label input-parent">
+                                            <input
+                                                type="text"
+                                                name="cardNickName"
+                                                class="input{% if checkoutInputErrors['cardNickName'] is defined %} input--has-error{% endif %} CheckoutForm__Input JSCheckoutForm__Input"
+                                                placeholder="i.e. My Check Card"
+                                            >
+                                            {% if checkoutInputErrors['cardNickName'] is defined %}
+                                                <ul class="CheckoutForm__InputErrors">
+                                                    {% for error in checkoutInputErrors.cardNickName %}
+                                                        <li class="CheckoutForm__InputErrorItem">
+                                                            {{ error|typeset }}
+                                                        </li>
+                                                    {% endfor %}
+                                                </ul>
+                                            {% endif %}
+                                        </label>
+                                    </div>
                                     <div class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
                                         <label class="label CheckoutForm__Label CheckoutForm__Label--Required CheckoutForm__Label--TwoThirds input-parent">
                                             Credit Card Number
@@ -400,8 +418,8 @@
                                             {% block noteContent %}{% endblock %}
                                         {% endembed %}
                                     </div>
-                                </section>
-                            </div>
+                                </div>
+                            </section>
                         </form>
                     {% endif %}
                 </div>
