Add links in footer to cookie policy, privacy policy, and terms of service

--- a/templates/_partials/SiteFooter.twig
+++ b/templates/_partials/SiteFooter.twig
@@ -2,6 +2,11 @@
     <div class="SiteFooter__Copyright">
         &copy; {{ "now"|date('Y') }} BuzzingPixel, LLC
     </div>
+    <div class="SiteFooter__Links">
+        <a class="SiteFooter__LinksLink" href="/cookies">Cookie Policy</a>
+        <a class="SiteFooter__LinksLink" href="/privacy">Privacy Policy</a>
+        <a class="SiteFooter__LinksLink" href="/terms">Terms of Service</a>
+    </div>
     <div class="SiteFooter__Icons">
         <a href="https://twitter.com/buzzingpixel" class="SiteFooter__Icon" title="BuzzingPixel on Twitter">
             {% include '_icons/icon-twitter.svg' %}
