--- a/assetsSource/css/layout/SiteFooter/SiteFooter.0000.pcss
+++ b/assetsSource/css/layout/SiteFooter/SiteFooter.0000.pcss
@@ -10,6 +10,16 @@
     padding-bottom: 10px;
 }
 
+.SiteFooter__Links {
+    font-size: 12px;
+    padding-bottom: 20px;
+}
+
+.SiteFooter__LinksLink {
+    color: #fff;
+    margin: 3px;
+}
+
 .SiteFooter__Icon {
     border: 1px solid #999;
     color: #bfbfbf;
