Add notice of terms and policies to form submissions and logins

--- a/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0000.pcss
+++ b/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0000.pcss
@@ -24,3 +24,12 @@
     padding-left: 16px;
     padding-right: 16px;
 }
+
+.LayoutTwoColumn__FooterInner {
+    padding-top: 26px;
+}
+
+.LayoutTwoColumn__FooterInner--IsPadded {
+    padding-left: 16px;
+    padding-right: 16px;
+}
