--- a/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0800.pcss
+++ b/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0800.pcss
@@ -24,3 +24,12 @@
     padding-left: 36px;
     padding-right: 36px;
 }
+
+.LayoutTwoColumn__FooterInner {
+    padding-top: 40px;
+}
+
+.LayoutTwoColumn__FooterInner--IsPadded {
+    padding-left: 36px;
+    padding-right: 36px;
+}
