--- a/assetsSource/css/utilities.pcss
+++ b/assetsSource/css/utilities.pcss
@@ -25,3 +25,16 @@ pre[class*="language-"] {
     border-color: var(--orange);
     margin-bottom: 0;
 }
+
+.TextCentered {
+    text-align: center;
+}
+
+.Block {
+    display: block;
+}
+
+.Gray,
+.Gray p {
+    color: var(--gray);
+}
