--- a/templates/_contentBlocks/contact.twig
+++ b/templates/_contentBlocks/contact.twig
@@ -105,6 +105,11 @@
                     </div>
                 </form>
             {% endblock %}
+            {% block footerContent %}
+                <small class="TextCentered Block Gray">
+                    By submitting this form, you agree to abide by the <a href="/terms">terms of service</a>, <a href="/privacy">privacy policy</a>, and&nbsp;<a href="/cookies">cookie&nbsp;policy</a>.
+                </small>
+            {% endblock %}
         {% endembed %}
     </div>
 </div>
