--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -117,6 +117,11 @@
                                             disabled
                                             {% endif %}
                                         >
+                                        <br>
+                                        <br>
+                                        <small class="Block Gray">
+                                            By submitting your payment, you agree to abide by the <a href="/terms">terms of service</a>, <a href="/privacy">privacy policy</a>, and&nbsp;<a href="/cookies">cookie&nbsp;policy</a>.
+                                        </small>
                                     </label>
                                     <div class="JSAjaxCartSubmissionNotice" style="display: none;">
                                         {% embed '_embeds/Note.twig' with {
@@ -436,6 +441,11 @@
                                             disabled
                                             {% endif %}
                                         >
+                                        <br>
+                                        <br>
+                                        <small class="Block Gray">
+                                            By submitting your payment, you agree to abide by the <a href="/terms">terms of service</a>, <a href="/privacy">privacy policy</a>, and&nbsp;<a href="/cookies">cookie&nbsp;policy</a>.
+                                        </small>
                                     </label>
                                     <div class="JSAjaxCartSubmissionNotice" style="display: none;">
                                         {% embed '_embeds/Note.twig' with {
