--- a/templates/_partials/LogInForm.twig
+++ b/templates/_partials/LogInForm.twig
@@ -76,6 +76,11 @@
                     </div>
                 </form>
             {% endblock %}
+            {% block footerContent %}
+                <small class="TextCentered Block Gray">
+                    By using this site, logging in, or registering, you agree to abide by the <a href="/terms">terms of service</a>, <a href="/privacy">privacy policy</a>, and&nbsp;<a href="/cookies">cookie&nbsp;policy</a>.
+                </small>
+            {% endblock %}
         {% endembed %}
     </div>
 </div>
