Style license card blocks for mobile

--- a/assetsSource/css/blocks/BlockCards/BlockCards.0000.pcss
+++ b/assetsSource/css/blocks/BlockCards/BlockCards.0000.pcss
@@ -20,3 +20,33 @@
 .BlockCards__SearchSubmit {
     width: 100%;
 }
+
+.BlockCards__Cards {
+    list-style: none;
+    margin: 0;
+}
+
+.BlockCards__Card {
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+.BlockCards__AuthorizedDomains {
+    padding-bottom: 18px;
+}
+
+.BlockCards__AuthorizedDomainsTitle {
+    font-weight: var(--StandardFontBoldWeight);
+    padding-bottom: 4px;
+}
+
+.BlockCards__AuthorizedDomainsList {
+    padding-bottom: 4px;
+}
+
+.BlockCards__NotesTitle {
+    border-bottom: 1px solid var(--lighterGray);
+    font-weight: var(--StandardFontBoldWeight);
+    margin-bottom: 16px;
+    padding-bottom: 8px;
+}
