Add and style test overlay content

--- a/templates/_layouts/Master.twig
+++ b/templates/_layouts/Master.twig
@@ -3,7 +3,7 @@
 {% extends '_layouts/HtmlWrapper.twig' %}
 
 {% block layoutContent %}
-    <div class="SiteWrapper">
+    <div class="SiteWrapper SiteWrapper--HasOverlay">
         {% include '_partials/SiteHeader.twig' %}
 
         <main class="SiteMain">
